--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Should you trade Crypto? Here's the truth</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">31 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>KSI's Coldest Moment</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US BUT HALF THE LOBBY ARE JESTERS</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2690,7 +2690,7 @@
                     <div class="video-info">
                         <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 28, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Should you trade Crypto? Here's the truth</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">31 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>KSI's Coldest Moment</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US BUT HALF THE LOBBY ARE JESTERS</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10958,7 +10958,7 @@
                         <div class="video-info">
                             <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 28, 2025</div>
                         </div>
                     </a>
                 </div>
