--- a/index.html
+++ b/index.html
@@ -2136,9 +2136,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=9i1ZNhpR8eM" target="_blank">
-                    <img src="https://i.ytimg.com/vi/9i1ZNhpR8eM/mqdefault.jpg" alt="WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP">
+                    <img src="https://i.ytimg.com/vi/9i1ZNhpR8eM/mqdefault.jpg" alt="WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP (GUMBALL  VLOG 1)">
                     <div class="video-info">
-                        <h3>WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
+                        <h3>WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP (GUMBALL  VLOG 1)</h3>
                         <div class="channel">Vikkstar123</div>
                         <div class="date">2 weeks ago</div>
                     </div>
@@ -10910,9 +10910,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=9i1ZNhpR8eM" target="_blank">
-                        <img src="https://i.ytimg.com/vi/9i1ZNhpR8eM/mqdefault.jpg" alt="WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP">
+                        <img src="https://i.ytimg.com/vi/9i1ZNhpR8eM/mqdefault.jpg" alt="WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP (GUMBALL  VLOG 1)">
                         <div class="video-info">
-                            <h3>WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
+                            <h3>WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP (GUMBALL  VLOG 1)</h3>
                             <div class="channel">Vikkstar123</div>
                             <div class="date">2 weeks ago</div>
                         </div>
