--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Why Life Feels So Hard (and How to Live Better) | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Bach Caught Arthur Lacking💤😅</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>ARTHUR IN THE ARENA! Little old me is doing Wembley! Pre-sale goes live 3rd Dec #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Keeping Your Bearings on the Spiritual Path</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Should you trade Crypto? Here's the truth</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -761,7 +761,7 @@
                     <div class="video-info">
                         <h3>My Favourite Pizza Topping - Properoni Crumble</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2580,7 +2580,7 @@
                     <div class="video-info">
                         <h3>Happy Halloween 🎃👻</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2646,7 +2646,7 @@
                     <div class="video-info">
                         <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 29, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Should you trade Crypto? Here's the truth</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Why Life Feels So Hard (and How to Live Better) | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Keeping Your Bearings on the Spiritual Path</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9428,7 +9428,7 @@
                         <div class="video-info">
                             <h3>My Favourite Pizza Topping - Properoni Crumble</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9626,7 +9626,7 @@
                         <div class="video-info">
                             <h3>Happy Halloween 🎃👻</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9648,7 +9648,7 @@
                         <div class="video-info">
                             <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 29, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Bach Caught Arthur Lacking💤😅</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>ARTHUR IN THE ARENA! Little old me is doing Wembley! Pre-sale goes live 3rd Dec #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
