--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=t5OVzkzZeGw" target="_blank">
-                    <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="The Horse Girls of TikTok..">
+                    <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="You Laugh you Lose: Horse Girls">
                     <div class="video-info">
-                        <h3>The Horse Girls of TikTok..</h3>
+                        <h3>You Laugh you Lose: Horse Girls</h3>
                         <div class="channel">ItalianBach</div>
                         <div class="date">1 hours ago</div>
                     </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>The Most Clutch Moment In Sidemen Among Us History</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -10228,9 +10228,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=t5OVzkzZeGw" target="_blank">
-                        <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="The Horse Girls of TikTok..">
+                        <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="You Laugh you Lose: Horse Girls">
                         <div class="video-info">
-                            <h3>The Horse Girls of TikTok..</h3>
+                            <h3>You Laugh you Lose: Horse Girls</h3>
                             <div class="channel">ItalianBach</div>
                             <div class="date">1 hours ago</div>
                         </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>The Most Clutch Moment In Sidemen Among Us History</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
